gen/DotGrammar/DotGrammarParser.java
// Generated from C:/Users/kmate/Documents/Önlab/onlab/src/ANTLR/DotGrammar.g4 by ANTLR 4.13.2
package DotGrammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class DotGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, WHITESPACE=30, INTERFACE_NAME=31, 
		HEADER=32, ARROWHEAD_TYPE=33, STYLE_TYPE=34, CLASS_NAME=35, IDENTIFIER=36, 
		NUMBERS=37, VISIBILITY_ICON=38;
	public static final int
		RULE_diagram = 0, RULE_nodes = 1, RULE_edges = 2, RULE_node = 3, RULE_node_title = 4, 
		RULE_node_body = 5, RULE_interface_name = 6, RULE_dot_functions = 7, RULE_dot_variables = 8, 
		RULE_dot_variable = 9, RULE_edge = 10, RULE_edge_attributes = 11, RULE_edge_labels = 12, 
		RULE_dot_function = 13, RULE_arrow_head = 14, RULE_style = 15, RULE_xlabel = 16, 
		RULE_taillabel = 17, RULE_variable_type = 18, RULE_multiplicity = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"diagram", "nodes", "edges", "node", "node_title", "node_body", "interface_name", 
			"dot_functions", "dot_variables", "dot_variable", "edge", "edge_attributes", 
			"edge_labels", "dot_function", "arrow_head", "style", "xlabel", "taillabel", 
			"variable_type", "multiplicity"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'digraph'", "'{'", "'['", "'label'", "'='", "'\"'", "'}\"]'", 
			"'|'", "'\\u00C2\\u00AB'", "'\\u00C2\\u00BB'", "':'", "'\\n'", "'edge'", 
			"']'", "'->'", "'('", "')'", "'void'", "'arrowhead'", "'style'", "'xlabel'", 
			"'taillabel'", "'int'", "'boolean'", "'string'", "'double'", "'date'", 
			"'..'", "'*'", null, null, "'node [ shape = \"record\"] edge [ arrowhead = \"empty\"]'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "WHITESPACE", "INTERFACE_NAME", "HEADER", 
			"ARROWHEAD_TYPE", "STYLE_TYPE", "CLASS_NAME", "IDENTIFIER", "NUMBERS", 
			"VISIBILITY_ICON"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DotGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DotGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DiagramContext extends ParserRuleContext {
		public TerminalNode CLASS_NAME() { return getToken(DotGrammarParser.CLASS_NAME, 0); }
		public TerminalNode HEADER() { return getToken(DotGrammarParser.HEADER, 0); }
		public NodesContext nodes() {
			return getRuleContext(NodesContext.class,0);
		}
		public EdgesContext edges() {
			return getRuleContext(EdgesContext.class,0);
		}
		public DiagramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_diagram; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DotGrammarListener ) ((DotGrammarListener)listener).enterDiagram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DotGrammarListener ) ((DotGrammarListener)listener).exitDiagram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DotGrammarVisitor ) return ((DotGrammarVisitor<? extends T>)visitor).visitDiagram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DiagramContext diagram() throws RecognitionException {
		DiagramContext _localctx = new DiagramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_diagram);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			match(T__0);
			setState(41);
			match(CLASS_NAME);
			setState(42);
			match(T__1);
			setState(43);
			match(HEADER);
			setState(44);
			nodes();
			setState(45);
			edges();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NodesContext extends ParserRuleContext {
		public List<NodeContext> node() {
			return getRuleContexts(NodeContext.class);
		}
		public NodeContext node(int i) {
			return getRuleContext(NodeContext.class,i);
		}
		public NodesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nodes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DotGrammarListener ) ((DotGrammarListener)listener).enterNodes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DotGrammarListener ) ((DotGrammarListener)listener).exitNodes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DotGrammarVisitor ) return ((DotGrammarVisitor<? extends T>)visitor).visitNodes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NodesContext nodes() throws RecognitionException {
		NodesContext _localctx = new NodesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_nodes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CLASS_NAME) {
				{
				{
				setState(47);
				node();
				}
				}
				setState(52);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EdgesContext extends ParserRuleContext {
		public List<EdgeContext> edge() {
			return getRuleContexts(EdgeContext.class);
		}
		public EdgeContext edge(int i) {
			return getRuleContext(EdgeContext.class,i);
		}
		public EdgesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_edges; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DotGrammarListener ) ((DotGrammarListener)listener).enterEdges(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DotGrammarListener ) ((DotGrammarListener)listener).exitEdges(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DotGrammarVisitor ) return ((DotGrammarVisitor<? extends T>)visitor).visitEdges(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EdgesContext edges() throws RecognitionException {
		EdgesContext _localctx = new EdgesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_edges);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__12) {
				{
				{
				setState(53);
				edge();
				}
				}
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NodeContext extends ParserRuleContext {
		public Node_titleContext node_title() {
			return getRuleContext(Node_titleContext.class,0);
		}
		public Node_bodyContext node_body() {
			return getRuleContext(Node_bodyContext.class,0);
		}
		public NodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_node; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DotGrammarListener ) ((DotGrammarListener)listener).enterNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DotGrammarListener ) ((DotGrammarListener)listener).exitNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DotGrammarVisitor ) return ((DotGrammarVisitor<? extends T>)visitor).visitNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NodeContext node() throws RecognitionException {
		NodeContext _localctx = new NodeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_node);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			node_title();
			setState(60);
			match(T__2);
			setState(61);
			match(T__3);
			setState(62);
			match(T__4);
			setState(63);
			match(T__5);
			setState(64);
			match(T__1);
			setState(65);
			node_body();
			setState(66);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Node_titleContext extends ParserRuleContext {
		public TerminalNode CLASS_NAME() { return getToken(DotGrammarParser.CLASS_NAME, 0); }
		public Node_titleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_node_title; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DotGrammarListener ) ((DotGrammarListener)listener).enterNode_title(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DotGrammarListener ) ((DotGrammarListener)listener).exitNode_title(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DotGrammarVisitor ) return ((DotGrammarVisitor<? extends T>)visitor).visitNode_title(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Node_titleContext node_title() throws RecognitionException {
		Node_titleContext _localctx = new Node_titleContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_node_title);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(CLASS_NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Node_bodyContext extends ParserRuleContext {
		public Dot_variablesContext dot_variables() {
			return getRuleContext(Dot_variablesContext.class,0);
		}
		public Dot_functionsContext dot_functions() {
			return getRuleContext(Dot_functionsContext.class,0);
		}
		public Interface_nameContext interface_name() {
			return getRuleContext(Interface_nameContext.class,0);
		}
		public TerminalNode CLASS_NAME() { return getToken(DotGrammarParser.CLASS_NAME, 0); }
		public Node_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_node_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DotGrammarListener ) ((DotGrammarListener)listener).enterNode_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DotGrammarListener ) ((DotGrammarListener)listener).exitNode_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DotGrammarVisitor ) return ((DotGrammarVisitor<? extends T>)visitor).visitNode_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Node_bodyContext node_body() throws RecognitionException {
		Node_bodyContext _localctx = new Node_bodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_node_body);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__8:
				{
				setState(70);
				interface_name();
				}
				break;
			case CLASS_NAME:
				{
				setState(71);
				match(CLASS_NAME);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(74);
			match(T__7);
			setState(75);
			dot_variables();
			setState(76);
			match(T__7);
			setState(77);
			dot_functions();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Interface_nameContext extends ParserRuleContext {
		public TerminalNode CLASS_NAME() { return getToken(DotGrammarParser.CLASS_NAME, 0); }
		public Interface_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interface_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DotGrammarListener ) ((DotGrammarListener)listener).enterInterface_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DotGrammarListener ) ((DotGrammarListener)listener).exitInterface_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DotGrammarVisitor ) return ((DotGrammarVisitor<? extends T>)visitor).visitInterface_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Interface_nameContext interface_name() throws RecognitionException {
		Interface_nameContext _localctx = new Interface_nameContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_interface_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(T__8);
			setState(80);
			match(CLASS_NAME);
			setState(81);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Dot_functionsContext extends ParserRuleContext {
		public List<Dot_functionContext> dot_function() {
			return getRuleContexts(Dot_functionContext.class);
		}
		public Dot_functionContext dot_function(int i) {
			return getRuleContext(Dot_functionContext.class,i);
		}
		public Dot_functionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dot_functions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DotGrammarListener ) ((DotGrammarListener)listener).enterDot_functions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DotGrammarListener ) ((DotGrammarListener)listener).exitDot_functions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DotGrammarVisitor ) return ((DotGrammarVisitor<? extends T>)visitor).visitDot_functions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Dot_functionsContext dot_functions() throws RecognitionException {
		Dot_functionsContext _localctx = new Dot_functionsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_dot_functions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VISIBILITY_ICON) {
				{
				{
				setState(83);
				dot_function();
				}
				}
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Dot_variablesContext extends ParserRuleContext {
		public List<Dot_variableContext> dot_variable() {
			return getRuleContexts(Dot_variableContext.class);
		}
		public Dot_variableContext dot_variable(int i) {
			return getRuleContext(Dot_variableContext.class,i);
		}
		public Dot_variablesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dot_variables; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DotGrammarListener ) ((DotGrammarListener)listener).enterDot_variables(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DotGrammarListener ) ((DotGrammarListener)listener).exitDot_variables(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DotGrammarVisitor ) return ((DotGrammarVisitor<? extends T>)visitor).visitDot_variables(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Dot_variablesContext dot_variables() throws RecognitionException {
		Dot_variablesContext _localctx = new Dot_variablesContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_dot_variables);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VISIBILITY_ICON) {
				{
				{
				setState(89);
				dot_variable();
				}
				}
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Dot_variableContext extends ParserRuleContext {
		public TerminalNode VISIBILITY_ICON() { return getToken(DotGrammarParser.VISIBILITY_ICON, 0); }
		public TerminalNode IDENTIFIER() { return getToken(DotGrammarParser.IDENTIFIER, 0); }
		public Variable_typeContext variable_type() {
			return getRuleContext(Variable_typeContext.class,0);
		}
		public Dot_variableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dot_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DotGrammarListener ) ((DotGrammarListener)listener).enterDot_variable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DotGrammarListener ) ((DotGrammarListener)listener).exitDot_variable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DotGrammarVisitor ) return ((DotGrammarVisitor<? extends T>)visitor).visitDot_variable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Dot_variableContext dot_variable() throws RecognitionException {
		Dot_variableContext _localctx = new Dot_variableContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_dot_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(VISIBILITY_ICON);
			setState(96);
			match(IDENTIFIER);
			setState(97);
			match(T__10);
			setState(98);
			variable_type();
			setState(99);
			match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EdgeContext extends ParserRuleContext {
		public Edge_attributesContext edge_attributes() {
			return getRuleContext(Edge_attributesContext.class,0);
		}
		public List<TerminalNode> CLASS_NAME() { return getTokens(DotGrammarParser.CLASS_NAME); }
		public TerminalNode CLASS_NAME(int i) {
			return getToken(DotGrammarParser.CLASS_NAME, i);
		}
		public Edge_labelsContext edge_labels() {
			return getRuleContext(Edge_labelsContext.class,0);
		}
		public EdgeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_edge; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DotGrammarListener ) ((DotGrammarListener)listener).enterEdge(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DotGrammarListener ) ((DotGrammarListener)listener).exitEdge(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DotGrammarVisitor ) return ((DotGrammarVisitor<? extends T>)visitor).visitEdge(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EdgeContext edge() throws RecognitionException {
		EdgeContext _localctx = new EdgeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_edge);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(T__12);
			setState(102);
			match(T__2);
			setState(103);
			edge_attributes();
			setState(104);
			match(T__13);
			setState(105);
			match(CLASS_NAME);
			setState(106);
			match(T__14);
			setState(107);
			match(CLASS_NAME);
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(108);
				edge_labels();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Edge_attributesContext extends ParserRuleContext {
		public List<Arrow_headContext> arrow_head() {
			return getRuleContexts(Arrow_headContext.class);
		}
		public Arrow_headContext arrow_head(int i) {
			return getRuleContext(Arrow_headContext.class,i);
		}
		public List<StyleContext> style() {
			return getRuleContexts(StyleContext.class);
		}
		public StyleContext style(int i) {
			return getRuleContext(StyleContext.class,i);
		}
		public Edge_attributesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_edge_attributes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DotGrammarListener ) ((DotGrammarListener)listener).enterEdge_attributes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DotGrammarListener ) ((DotGrammarListener)listener).exitEdge_attributes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DotGrammarVisitor ) return ((DotGrammarVisitor<? extends T>)visitor).visitEdge_attributes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Edge_attributesContext edge_attributes() throws RecognitionException {
		Edge_attributesContext _localctx = new Edge_attributesContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_edge_attributes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__18 || _la==T__19) {
				{
				setState(113);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__18:
					{
					setState(111);
					arrow_head();
					}
					break;
				case T__19:
					{
					setState(112);
					style();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Edge_labelsContext extends ParserRuleContext {
		public XlabelContext xlabel() {
			return getRuleContext(XlabelContext.class,0);
		}
		public TaillabelContext taillabel() {
			return getRuleContext(TaillabelContext.class,0);
		}
		public Edge_labelsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_edge_labels; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DotGrammarListener ) ((DotGrammarListener)listener).enterEdge_labels(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DotGrammarListener ) ((DotGrammarListener)listener).exitEdge_labels(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DotGrammarVisitor ) return ((DotGrammarVisitor<? extends T>)visitor).visitEdge_labels(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Edge_labelsContext edge_labels() throws RecognitionException {
		Edge_labelsContext _localctx = new Edge_labelsContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_edge_labels);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(T__2);
			setState(121);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__20:
				{
				setState(119);
				xlabel();
				}
				break;
			case T__21:
				{
				setState(120);
				taillabel();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(123);
			match(T__13);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Dot_functionContext extends ParserRuleContext {
		public TerminalNode VISIBILITY_ICON() { return getToken(DotGrammarParser.VISIBILITY_ICON, 0); }
		public TerminalNode IDENTIFIER() { return getToken(DotGrammarParser.IDENTIFIER, 0); }
		public Variable_typeContext variable_type() {
			return getRuleContext(Variable_typeContext.class,0);
		}
		public Dot_functionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dot_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DotGrammarListener ) ((DotGrammarListener)listener).enterDot_function(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DotGrammarListener ) ((DotGrammarListener)listener).exitDot_function(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DotGrammarVisitor ) return ((DotGrammarVisitor<? extends T>)visitor).visitDot_function(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Dot_functionContext dot_function() throws RecognitionException {
		Dot_functionContext _localctx = new Dot_functionContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_dot_function);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(VISIBILITY_ICON);
			setState(126);
			match(IDENTIFIER);
			setState(127);
			match(T__15);
			setState(128);
			match(T__16);
			setState(129);
			match(T__10);
			setState(132);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__17:
				{
				setState(130);
				match(T__17);
				}
				break;
			case T__22:
			case T__23:
			case T__24:
			case T__25:
			case T__26:
				{
				setState(131);
				variable_type();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(134);
			match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
